Fixed fontawesome UI bug & installed sweetalert & added project deletion

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+@import "@fortawesome/fontawesome-free/css/all.css";
+
+.swal2-container {
+    z-index: 99999 !important;
+}
